<?xml version="1.0"?>
<package format="2">
  <name>console_bridge</name>
  <version>0.0.0</version>
  <description>H-ROS urdfdom headers</description>
  <maintainer email="ahcorde@erlerobotics.com">Alejandro Hernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

